[tool.poetry]
name = "15.09.23parserolx"
version = "0.1.0"
description = ""
authors = ["Ariulis <andrey59995@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests-html = "^0.10.0"
loguru = "^0.7.2"
aiogram = "^3.0.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.3"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
